Fixed spacing on header buttons

--- a/static/main.css
+++ b/static/main.css
@@ -11,8 +11,8 @@
     width: 300px;
 }
 
-.header-subtitle {
-    margin-bottom: 1rem;
+.header-buttons {
+    margin-top: -0.5rem;
 }
 
 .how-to-play-list {
